--- a/src/components/products/Products.css
+++ b/src/components/products/Products.css
@@ -2,7 +2,38 @@
    display: flex;
    align-items: flex-start;
    justify-content: flex-end;
-   /* flex-direction: column; */
+   flex-direction: column;
+   z-index: 1;
+   width: 100%;
+   min-width: 100px;
+   max-height: 400px;
+   margin: 10px;
+   padding: 20px;
+   background-color: white;
+   transition:  backgroud 0.5 ease ;
+}
+
+.product:hover {
+   background-color: #dfc3e0;
+   color: white;
+}
+
+.product > img {
+   width: 100%;
+   max-height: 200px ;
+   object-fit: contain;
+   margin-bottom: 15px;
+   transition: all 0.5s;
+}
+.product:hover img { transform: scale(1.1);}
+
+.product-info {
+   width: 100%;
+   min-height: 100px;
+}
+
+.product-price {
+   margin-top: 5px;
 }
 
 .product-rating {
@@ -15,13 +46,33 @@
 .product-rating p img {
    width: 100%;
    height: 100%;
+   margin-bottom: 10px;
    object-fit: contain;
+}
+
+.product > button {
+   display: block;
+   margin: 10px auto 0;
+   width: 150px;
+   height: 35px;
+   background-color: #cd9042;
+   border: 1px solid ;
+   border-color: #a88734 #9c7e31 #846a29;
+   color: #111;
+   border-radius: 5px;
+   transition: transform 0.5 ease;
+   cursor: pointer;
+}
+.product > button:hover {
+   transform: scale(0.9);
+   background-color: black;
+   color: white;
+   
+}
+
+.hom-row {
+   display: flex;
+   margin-left: 5px;
+   margin-right: 5px;
    z-index: 1;
-   width: 100%;
-   max-height: 400px;
-   min-width: 100px;
-   margin: 10px;
-   padding: 20px;
-   background-color: white;
-   transition: background 0.3s ease;
 }
