--- a/src/components/products/Products.css
+++ b/src/components/products/Products.css
@@ -5,17 +5,20 @@
    flex-direction: column;
    z-index: 1;
    width: 100%;
-   min-width: 100px;
    max-height: 400px;
+   min-width: 100px;
    margin: 10px;
    padding: 20px;
    background-color: white;
    transition:  backgroud 0.5 ease ;
+   /* border: 4px solid transparent; */
 }
 
 .product:hover {
-   background-color: #131921;
-   color: white;
+   /* border: 4px solid #cd9042; */
+   transition: all 0.5s ease;
+   box-shadow: 0 0 0 3px #d0d0d0;
+   /* color: white; */
 }
 
 .product > img {
@@ -23,7 +26,7 @@
    max-height: 200px ;
    object-fit: contain;
    margin-bottom: 15px;
-   transition: all 0.5s;
+   transition: all 0.5s ease;
 }
 .product:hover img { transform: scale(1.1);}
 
@@ -46,7 +49,7 @@
 .product-rating p img {
    width: 100%;
    height: 100%;
-   margin-bottom: 10px;
+   /* margin-bottom: 10px; */
    object-fit: contain;
 }
 
@@ -64,7 +67,7 @@
    cursor: pointer;
 }
 .product > button:hover {
-   transform: scale(0.9);
+   transform: scale(0.8);
    background-color: black;
    color: white;
    
@@ -72,7 +75,7 @@
 
 .hom-row {
    display: flex;
+   z-index: 1;
    margin-left: 5px;
    margin-right: 5px;
-   z-index: 1;
 }
