--- a/src/components/products/Products.css
+++ b/src/components/products/Products.css
@@ -10,72 +10,63 @@
    margin: 10px;
    padding: 20px;
    background-color: white;
-   transition:  backgroud 0.5 ease ;
-   /* border: 4px solid transparent; */
-}
-
-.product:hover {
-   /* border: 4px solid #cd9042; */
-   transition: all 0.5s ease;
-   box-shadow: 0 0 0 3px #d0d0d0;
-   /* color: white; */
-}
-
-.product > img {
+   transition: background 0.3s ease;
+ }
+ .product:hover {
+   background-color: #131921;
+   color: white;
+ }
+ 
+ .product > img {
    width: 100%;
-   max-height: 200px ;
+   max-height: 200px;
    object-fit: contain;
    margin-bottom: 15px;
-   transition: all 0.5s ease;
-}
-.product:hover img { transform: scale(1.1);}
-
-.product-info {
+   transition: all 0.3s ease;
+ }
+ .product:hover img {
+   transform: scale(1.1);
+ }
+ .product-info {
    width: 100%;
    min-height: 100px;
-}
-
-.product-price {
+ }
+ .product-price {
    margin-top: 5px;
-}
-
-.product-rating {
+ }
+ .product-rating {
    display: flex;
-}
-.product-rating p {
+ }
+ 
+ .product-rating p {
    width: 20px;
    margin: 0 5px;
-}
-.product-rating p img {
+ }
+ .product-rating p img {
    width: 100%;
    height: 100%;
-   /* margin-bottom: 10px; */
    object-fit: contain;
-}
-
-.product > button {
+ }
+ .product > button {
    display: block;
    margin: 10px auto 0;
-   width: 150px;
-   height: 35px;
    background-color: #cd9042;
-   border: 1px solid ;
+   border: 1px solid;
    border-color: #a88734 #9c7e31 #846a29;
    color: #111;
-   border-radius: 5px;
-   transition: transform 0.5 ease;
    cursor: pointer;
-}
-.product > button:hover {
+   width: 150px;
+   height: 35px;
+   border-radius: 5px;
+   transition: transform 0.3s ease;
+ }
+ .product > button:active {
    transform: scale(0.8);
-   background-color: black;
-   color: white;
-   
-}
-
-.hom-row {
+ }
+ .hom-row {
    display: flex;
    z-index: 1;
    margin-left: 5px;
    margin-right: 5px;
-}
+ }
+ 
