--- a/src/components/payment/Payment.css
+++ b/src/components/payment/Payment.css
@@ -28,3 +28,22 @@
 .payment-details {
     flex: 0.8;
 }
+.payment-details > form {
+    max-width: 1400px;
+}
+ .payment-details .payment-priceContainer > h3 {
+    padding-top: 20px;
+}
+
+.payment-details > form > div > button {
+    background-color: #f0c14b;
+    border: 1px solid;
+    border-radius: 2px;
+    width: 100%;
+    height: 30px;
+    margin-top: 10px;
+    border-color:  #a88734 #9c7e31 #846a29;
+    color: #111;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
