--- a/src/components/checkoutProduct/CheckoutProduct.css
+++ b/src/components/checkoutProduct/CheckoutProduct.css
@@ -7,8 +7,7 @@
 .checkoutProduct-image {
     width: 180px;
     height: 180px;
-    border: 5px solid #f11313;
-    /* object-fit: contain; */
+    object-fit: contain;
 }
 .checkoutProduct-info{
     padding-left: 20px;
